<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity"
    android:paddingTop="60sp"
    android:orientation="vertical"
    android:layout_centerHorizontal="true"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/background_list"
    android:id="@+id/LinearLayoutStatPage">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_name"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        android:textColor="@android:color/holo_green_light"
        android:layout_gravity="center"
        android:fontFamily="casual"
        android:textAllCaps="true"
      />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100sp"
        android:layout_marginRight="100sp"
        android:layout_gravity="center"
        android:layout_marginTop="40sp"
        android:text="@string/newGame_classicMode"
        android:textSize="20sp"
        android:id="@+id/button_NewGameClassic"
        android:background="@drawable/ripple_btn_home_page"
        android:textColor="@color/text_white"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100sp"
        android:layout_marginRight="100sp"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:text="@string/newGame_expertMode"
        android:textSize="20sp"
        android:id="@+id/button_NewGameExpert"
        android:background="@drawable/ripple_btn_home_page"
        android:textColor="@color/text_white"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100sp"
        android:layout_marginRight="100sp"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:text="@string/string_settings"
        android:textSize="20sp"
        android:id="@+id/button_Settings"
        android:background="@drawable/ripple_btn_home_page"
        android:textColor="@color/text_white"

        />

    <Button
        android:layout_width="match_parent"
        android:layout_marginLeft="100sp"
        android:layout_marginRight="100sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:text="@string/string_scores"
        android:textSize="20sp"
        android:id="@+id/button_BestScores"
        android:background="@drawable/ripple_btn_home_page"
        android:textColor="@color/text_white"

        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100sp"
        android:layout_marginRight="100sp"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:text="@string/string_exit"
        android:textSize="20sp"
        android:id="@+id/button_Exit"
        android:background="@drawable/ripple_btn_home_page"
        android:textColor="@color/text_white"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="30sp"
        android:textSize="14sp"
        android:text="@string/version_string"
        />

</LinearLayout>