<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_list_settings"
    android:id="@+id/layout_settings">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_settings"
        android:textAllCaps="true"
        android:textSize="40sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:singleLine="true"
        android:id="@+id/settingHeader"
        android:fontFamily="serif-monospace"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settingHeader"
        android:text="@string/sound"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textColor="@color/text_white"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/soundText"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/soundText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:checked="true"
        android:text="@string/on"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:id="@+id/soundSwitch"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/soundSwitch"
        android:text="@string/music"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textColor="@color/text_white"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/musicText"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/musicText"
        android:checked="true"
        android:text="@string/on"
        android:textColor="@color/text_white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/musicSwitch"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/musicSwitch"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="25sp"
        android:text="@string/share"
        android:textColor="@color/text_white"
        android:textSize="20sp"
        android:singleLine="true"
        android:id="@+id/shareBtn"
        android:background="@drawable/ripple_effect_settings"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shareBtn"
        android:text="@string/rate"
        android:textAllCaps="true"
        android:textSize="20dp"
        android:textColor="@color/text_white"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/rateText"/>


    <RatingBar
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        style="?android:attr/ratingBarStyleIndicator"
        android:numStars="5"
        android:stepSize="0.5"
        android:layout_below="@+id/rateText"
        android:isIndicator="false"
        android:theme="@style/RatingBar"
        android:rating="0"
        android:saveEnabled="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rating"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/rate_btnString"
        android:textColor="@color/text_white"
        android:textSize="20sp"
        android:singleLine="true"
        android:id="@+id/rateBtn"
        android:background="@drawable/ripple_effect_settings"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rateBtn"
        android:layout_marginRight="160dp"
        android:layout_alignLeft="@+id/rateBtn"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/cancel"
        android:textColor="@color/text_white"
        android:textSize="20sp"
        android:id="@+id/cancelBtn"
        android:background="@drawable/ripple_effect_settings"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/cancelBtn"
        android:layout_marginLeft="160dp"
        android:layout_alignRight="@+id/rateBtn"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/save"
        android:textColor="@color/text_white"
        android:textSize="20sp"
        android:id="@+id/saveBtn"
        android:background="@drawable/ripple_effect_settings"/>

</RelativeLayout>