<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    android:orientation="vertical"
    android:theme="@style/DialogStageComlete"
    android:background="@drawable/dialog_end_game"
    android:id="@+id/dialog_stage_completed"

    >

    <ImageView
        android:layout_width="155dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:scaleType="fitCenter"
        android:src="@drawable/medal" />

    <TextView
        android:id="@+id/dialog_message_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/congratulations"
        android:textColor="@color/text_black"
        android:textSize="24sp" />


<!--    <TextView-->
<!--        android:id="@+id/dialog_ask_text"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginHorizontal="24dp"-->
<!--        android:gravity="center"-->
<!--        android:text="@string/try_again_comment"-->
<!--        android:textSize="24sp"-->
<!--        android:textColor="@color/text_black"-->
<!--        />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp">

        <Button
            android:id="@+id/dialog_button_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/text_black"
            android:background="@drawable/button_dialog"/>

        <Button
            android:id="@+id/dialog_button_next_stage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next_stage"
            android:textColor="@color/text_black"
            android:background="@drawable/button_dialog"/>

    </LinearLayout>

</LinearLayout>